--- a/GradeWire/templates/admin_login.html
+++ b/GradeWire/templates/admin_login.html
@@ -111,7 +111,7 @@
     <!-- admin Login Page -->
     <div class="form-container">
         <h2>admin Login</h2>
-        <form action="/admin-dashboard/" method="POST">
+        <form action="" method="POST">
             {% csrf_token %}
             <label for="username">USERNAME</label>
             <input type="text" id="username" placeholder="username" name="username" required>
