--- a/GradeWire/templates/stdnt_register.html
+++ b/GradeWire/templates/stdnt_register.html
@@ -230,7 +230,7 @@
         </form>
         
         <div class="link">
-            <p>Already have an account? <a href="{% url 'studentlogin' %}">Login here</a></p>
+            <p>Already have an account? <a href="{% url 'studentLogin' %}">Login here</a></p>
         </div>
     </div>
 </body>
