--- a/GradeWire/templates/teach_login.html
+++ b/GradeWire/templates/teach_login.html
@@ -111,7 +111,7 @@
     <!-- teacher Login Page -->
     <div class="form-container">
         <h2> teacher Login</h2>
-        <form action="/teacher-dashboard/" method="POST">
+        <form action="" method="POST">
             {% csrf_token %}
             <label for= "teacher_id">REGISTER NUMBER</label>
             <input type="text" id= "teacher_id" placeholder="REGISTER NUMBER" name= "teacher_id" required>
@@ -127,7 +127,14 @@
                 <a href="{% url 'teacherRegister' %}">Register</a>
             </div>
         </form>
+
+{% if messages %}
+{% for message in messages %}
+  <p style="color:red">{{ message }}</p>
+{% endfor %}
+{% endif %}
     </div>
 
 </body>
 </html>
+
