--- a/GradeWire/templates/admin_dashboard.html
+++ b/GradeWire/templates/admin_dashboard.html
@@ -16,6 +16,8 @@
         <a href="{% url 'ManageStudent' %}" >Manage Students</a>
         <a href="{% url 'ManageTeacher' %}"  >Manage Teachers</a>
         <a href="{% url 'adminMgCourse' %}"  >Manage Courses</a>
+        <a href="{% url 'ManageSubject' %}" >Manage Subjects</a>
+
         <a href="{% url 'logout' %}" class="logout" >Logout</a>
     </div>
 
