--- a/GradeWire/templates/admin_mg_teacher.html
+++ b/GradeWire/templates/admin_mg_teacher.html
@@ -94,6 +94,8 @@
         <a href="{% url 'ManageStudent' %}"  >Manage Students</a>
         <a href="{% url 'ManageTeacher' %}" >Manage Teachers</a>
         <a href="{% url 'ManageCourse' %}" >Manage Courses</a>
+        <a href="{% url 'ManageSubject' %}" >Manage Subjects</a>
+
         <a href="{% url 'logout' %}" class="logout" id="logoutButton" >Logout</a>
     </div>
     <div class="content">
