--- a/GradeWire/templates/edit_teacher.html
+++ b/GradeWire/templates/edit_teacher.html
@@ -15,6 +15,8 @@
         <a href="{% url 'ManageStudent' %}" >Manage Students</a>
         <a href="{% url 'ManageTeacher' %}" >Manage Teachers</a>
         <a href="{% url 'ManageCourse' %}" onclick="showSection('manage-courses')">Manage Courses</a>
+        <a href="{% url 'ManageSubject' %}" >Manage Subjects</a>
+
         <a href="{% url 'logout' %}" class="logout" id="logoutButton">Logout</a>
     </div>
 
