--- a/GradeWire/static/assets/css/stdnt-style.css
+++ b/GradeWire/static/assets/css/stdnt-style.css
@@ -40,7 +40,12 @@
   .sidebar a:hover {
     background-color: #58bfff;
   }
-
+  .header {
+    background-color: #2c3e50;
+    color: white;
+    padding: 10px 20px;
+    margin-bottom: 20px;
+}
 
  .sidebar .logout {
     margin-top: auto;
@@ -66,6 +71,42 @@
   .section.active {
     display: block;
   }
+
+
+  h2 {
+    font-size: 24px;
+    margin-bottom: 20px;
+}
+
+form {
+    margin-bottom: 20px;
+
+}
+
+form label {
+    margin-right: 10px;
+    font-weight: bold;
+}
+
+form input, form select, form button {
+    margin: 5px 0;
+    padding: 10px;
+    width: calc(100% - 22px);
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
+
+form button {
+    background-color: #2c3e50;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+form button:hover {
+    background-color: #5ac0df;
+}
+
 
   .chart-container {
     width: 100%;
