--- a/GradeWire/templates/admin_mg_subject.html
+++ b/GradeWire/templates/admin_mg_subject.html
@@ -131,16 +131,16 @@ opacity: 0.8;  /* Slight transparency on hover */
                     </thead>
                     <tbody id="subjectTableBody">
                         <!-- Subject rows will be dynamically added here -->
-                        {% for s in subject %}
+                        {% for s in subjects %}
                             <tr>
                                 <td>{{ s.subject_code}}</td>
                                 <td>{{ s.name }}</td>
                                 <td>{{s.course}}</td>
                                 <td>
                                     <!-- Edit Button -->
-                                    <a href="{% url 'edit_subject' subject.id %}"  style="border: 1px solid; text-decoration: none; color: black;">Edit</a> | 
+                                    <a href="{% url 'edit_subject' s.id %}"  style="border: 1px solid; text-decoration: none; color: black;">Edit</a> | 
                                     <!-- Delete Button -->
-                                    <a href="{% url 'delete_subject' subject.id %}" onclick="return confirm('Are you sure you want to delete this subject?');" style="border: 1px solid; text-decoration: none; color: black;">Delete</a>
+                                    <a href="{% url 'delete_subject' s.id %}" onclick="return confirm('Are you sure you want to delete this subject?');" style="border: 1px solid; text-decoration: none; color: black;">Delete</a>
                                 </td>
                             </tr>
                         {% endfor %}
