--- a/GradeWire/templates/stdnt_profile.html
+++ b/GradeWire/templates/stdnt_profile.html
@@ -58,19 +58,21 @@ form button:hover {
     <div id="profile" class="section active">
       <h2>Your Profile</h2>
       <form>
+        {% for student in students %}
           <label for="name">Name:</label>
-          <input type="text" id="name" name="name" value="John Doe" disabled><br><br>
+          <input type="text" id="name" name="name" value="{{ student.name }}" disabled><br><br>
   
           <label for="email">Email:</label>
-          <input type="email" id="email" name="email" value="john.doe@example.com" disabled><br><br>
+          <input type="email" id="email" name="email" value="{{ student.email }}" disabled><br><br>
   
           <label for="phone">Phone:</label>
-          <input type="text" id="phone" name="phone" value="+123456789" disabled><br><br>
+          <input type="text" id="phone" name="phone" value="{{ student.mobile }}" disabled><br><br>
   
           <label for="department">Department:</label>
-          <input type="text" id="department" name="department" value="Mathematics" disabled><br><br>
+          <input type="text" id="department" name="department" value="{{ student.department }}" disabled><br><br>
   
           <button type="button" onclick="alert('Profile updated!')">Update Profile</button>
+          {% endfor %}
       </form>
   </div>
   </div>
